--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -10,7 +10,10 @@ jobs:
   scrape:
     runs-on: ubuntu-latest
     timeout-minutes: 45  # Prevent hanging (sentiment analysis takes time)
-    
+
+    permissions:  # ← This needs to be here, at the job level
+      contents: write
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -42,3 +45,5 @@ jobs:
         git config --local user.name "GitHub Action Bot"
         git add -A
         git diff --quiet && git diff --staged --quiet || (git commit -m "🤖 Auto-update: $(date +'%Y-%m-%d %H:%M UTC')" && git push)
+        
+
