--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
+pandas==2.1.0
 transformers==4.35.0
 torch==2.1.0
 numpy<2
+sentencepiece==0.1.99
