--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,17 +1,17 @@
-name: Daily Egyptian News Scraper
+name: Daily Egyptian Economic News Scraper
 
 on:
   schedule:
-    # Runs every day at 9 AM UTC
+    # Runs every day at 9 AM UTC (11 AM Egypt time)
     - cron: '0 9 * * *'
-  workflow_dispatch:  # Allows manual trigger from GitHub UI
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    timeout-minutes: 45  # Prevent hanging (sentiment analysis takes time)
+    timeout-minutes: 60  # Increased for dual-language scraping
 
-    permissions:  # ← This needs to be here, at the job level
+    permissions:
       contents: write
 
     steps:
@@ -36,8 +36,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: Run scraper with sentiment analysis
-      run: python scraper_with_sentiment.py
+    - name: Run dual-language scraper
+      run: python scraper_main.py
     
     - name: Commit and push if changes
       run: |
@@ -45,5 +45,3 @@ jobs:
         git config --local user.name "GitHub Action Bot"
         git add -A
         git diff --quiet && git diff --staged --quiet || (git commit -m "🤖 Auto-update: $(date +'%Y-%m-%d %H:%M UTC')" && git push)
-        
-
