--- a/.github/workflows/update_forecast.yml
+++ b/.github/workflows/update_forecast.yml
@@ -2,11 +2,11 @@ name: Update Egypt Inflation Forecast
 
 on:
   schedule:
-    # Run on the 1st of every month at 00:00 UTC
-    - cron: '0 0 1 * *'
-  
-  # Allow manual trigger
-  workflow_dispatch:
+    - cron: '0 0 1 * *'  # 1st of every month
+  workflow_dispatch:      # Manual trigger
+
+permissions:
+  contents: write  # Allow pushing to repo
 
 jobs:
   update-forecast:
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,9 +31,14 @@ jobs:
         run: |
           python calculate_forecast.py
       
-      - name: Commit and push if changed
+      - name: Commit and push changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/egypt_inflation_forecast.csv
-          git diff --quiet && git diff --staged --quiet || (git commit -m "🤖 Auto-update: Egypt inflation forecast $(date +'%Y-%m-%d')" && git push)
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "🤖 Auto-update: Inflation forecast $(date +'%Y-%m-%d')"
+            git push
+          fi
